--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,8 +1,10 @@
 :root {
   --light-color: #f3f3f3;
+  --light-color-1: #ebe9e9;
   --dark-color: #444;
   --dark-color-1: #777;
   --default-color: #c7c24c;
   --primary-color: #a8c7d7;
   --secondary-color: #f6b81f;
+  --danger-color: #e43b1d;
 }
